--- a/pyetl_webapp/static/statictest/dd1.html
+++ b/pyetl_webapp/static/statictest/dd1.html
@@ -3,9 +3,9 @@
 <head>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/static/css/bootstrap.css">
-  <link rel="stylesheet" href="/static/css/main.css">
-  <link rel="icon" href="/static/images/favicon.ico">
+  <link rel="stylesheet" href="/mw/css/bootstrap.css">
+  <link rel="stylesheet" href="/mw/css/main.css">
+  <link rel="icon" href="/mw/images/favicon.ico">
 
 </head>
 <body>
@@ -23,16 +23,16 @@
   <p><span>Selected job title: {{ selectedJobTitle  }}</span></p>
 </div>
 
-<script src="/static/js/vue.js"></script>
-<script src="/static/js/axios.js"></script>
-<script src="/static/js/jquery-3.5.1.slim.min.js"></script>
-<script src="/static/js/popper.min.js"></script>
-<script src="/static/js/bootstrap/bootstrap.min.js"></script>
+<script src="/mw/js/vue.js"></script>
+<script src="/mw/js/axios.js"></script>
+<script src="/mw/js/jquery-3.5.1.slim.min.js"></script>
+<script src="/mw/js/popper.min.js"></script>
+<script src="/mw/js/bootstrap/bootstrap.min.js"></script>
 
 
 
 
 </div>
-<script src="/static/statictest/vuejs1.js"></script>
+<script src="/mw/mwtest/vuejs1.js"></script>
 </body>
 </html>
